--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>Page Title</title>
 </head>
 <body>
+<h1>This is a Heading</h1>
 <p>First paragraph.</p>
 	<p>this is another paragraph.</p>
 </body>
