--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html>
 <head>
@@ -6,5 +5,6 @@
 </head>
 <body>
 <p>First paragraph.</p>
+	<p>this is another paragraph.</p>
 </body>
 </html> 
